--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -1032,7 +1032,13 @@
             </div>
             <div class="form-group">
               <label for="phone" data-translate="phone">Телефон*</label>
-              <input type="tel" id="modalPhone" name="phone" required />
+              <input
+                type="tel"
+                id="modalPhone"
+                name="phone"
+                placeholder="+38 (___) ___ ____"
+                required
+              />
             </div>
             <div class="form-group">
               <label for="vin" data-translate="vin">VIN код автомобиля</label>
@@ -1056,7 +1062,7 @@
       </div>
       <div class="social-fixed">
         <a
-          href="https://t.me/RofLJeKee"
+          href="https://t.me/kkua1210"
           target="_blank"
           class="social-btn telegram"
           ><svg
