--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Автосервис Каскад в Павлограде | Ремонт авто, диагностика, ТО</title>
+    <link rel="icon" href="./favicon.png" type="image/png" />
+    <title>Автосервіс Каскад у Павлограді | Ремонт авто, діагностика, ТО</title>
     <meta
       name="description"
-      content="🔧 Автосервис «Каскад» в Павлограде: профессиональный ремонт и обслуживание автомобилей.  
-✔ Установка и ремонт ГБО  
-✔ Обслуживание кондиционеров 
-✔ Ремонт двигателей, ходовой части, трансмиссии  
-✔ Кузовные работы (покраска, рихтовка, удаление вмятин)  
-✔ Развал-схождение, замена шин и балансировка  
-✔ Полная диагностика, ТО, замена масла и фильтров  
-🚗 Звоните!"
+      content="🔧 Автосервіс «Каскад» у Павлограді: професійний ремонт та обслуговування автомобілів.  
+✔ Встановлення та ремонт ГБО  
+✔ Обслуговування кондиціонерів  
+✔ Ремонт двигунів, ходової частини, трансмісії  
+✔ Кузовні роботи (фарбування, рихтування, видалення вм’ятин)  
+✔ Розвал-сходження, заміна шин і балансування  
+✔ Повна діагностика, ТО, заміна мастила та фільтрів  
+🚗 Дзвоніть!"
     />
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/js/main.js" />
