--- a/service-catalog.html
+++ b/service-catalog.html
@@ -12,7 +12,23 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>АС КАСКАД</title>
+    <link rel="icon" href="./favicon.png" type="image/png" />
+    <title>
+      Автосервіс Каскад у Павлограді | Повний комплекс ремонту та обслуговування
+      авто
+    </title>
+    <meta
+      name="description"
+      content="🚗 Автосервіс «Каскад» у Павлограді – 100+ видів робіт для вашого авто! 
+      ✔ Комплексна діагностика та ремонт 
+      ✔ Двигуни, коробки передач, ходова частина 
+      ✔ Кузовний ремонт та фарбування 
+      ✔ ГБО монтаж та обслуговування 
+      ✔ Електроніка та автопроводка 
+      ✔ Шиномонтаж та розвал-сходження 
+      ✔ ТО та сервісне обслуговування 
+      🔧 Гарантія якості ☎️ Працюємо без вихідних!"
+    />
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/js/main.js" />
     <link rel="stylesheet" href="./src/js/language.js" />
@@ -298,6 +314,7 @@
                   class="catalog-img"
                   src="./src/img/service/dvigatel/8tcizgctuko-1-qpchmrvh7aztnf3sxxf8uhdyo8x8en6kivx116w2bo.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig1">
                   Ремонт двигателя Ауди А5
@@ -308,6 +325,7 @@
                   class="catalog-img"
                   src="./src/img/service/dvigatel/eaaykygwgyy-qpchmwko5h699gwz6hgdoy79n6a2h4p87j6gfkp3gk.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig2">
                   Ремонт двигателя Ауди А4
@@ -318,6 +336,7 @@
                   class="catalog-img"
                   src="./src/img/service/dvigatel/eeoeyod3zfy-qpchn35jhbf9iqnf42aroejhsvdmz0fckfqusifc90.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig3">
                   Замена цепи ГРМ на Ниссан Мурано Z51
@@ -328,6 +347,7 @@
                   class="catalog-img"
                   src="./src/img/service/dvigatel/od7mqwtn4qi-qpchmstbe513z12fsftvez5f9mslmcaav0kiiguo5g.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig4">
                   Ремонт двигателя Mitsubishi Outlander
@@ -338,6 +358,7 @@
                   class="catalog-img"
                   src="./src/img/service/dvigatel/vshf9b1rcui-qpchn27pahdz74os9jw53ws17hi9rbbm8b3db8gqf8.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig5">
                   Замена маховика Skoda Yeti
@@ -348,6 +369,7 @@
                   class="catalog-img"
                   src="./src/img/service/dvigatel/w2dp2ejmdcy-qpchn8skmbmzgef874qj3d49d6lu971ql7nro66z7o.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-dvig6">
                   Ремонт двигателя Volkswagen Passat B7
@@ -374,6 +396,7 @@
                   class="catalog-img"
                   src="./src/img/service/hodovka/ford-4-min.jpg"
                   alt="ford"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov1">
                   Замена нижних с/б Ford
@@ -384,6 +407,7 @@
                   class="catalog-img"
                   src="./src/img/service/hodovka/nis-1-min.jpg"
                   alt="Nissan Qashqai"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov2">
                   Ремонт сайлентблока Nissan Qashqai
@@ -394,6 +418,7 @@
                   class="catalog-img"
                   src="./src/img/service/hodovka/nissan2-min.jpg"
                   alt="Nissan"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov3">
                   Замена сальника привода КПП Nissan
@@ -404,6 +429,7 @@
                   class="catalog-img"
                   src="./src/img/service/hodovka/nissan_note5-1_1.jpg"
                   alt="Nissan Note"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov4">
                   Замена пружин Nissan Note
@@ -414,6 +440,7 @@
                   class="catalog-img"
                   src="./src/img/service/hodovka/pego3-min.jpg"
                   alt="Pego"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov5">
                   Замена сальника привода и стоек стабилизатора Pego
@@ -424,6 +451,7 @@
                   class="catalog-img"
                   src="./src/img/service/hodovka/tig4-min.jpg"
                   alt="Volkswagen Tiguan"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-hodov6">
                   Замена амортизаторов Volkswagen Tiguan
@@ -451,6 +479,7 @@
                   class="catalog-img"
                   src="./src/img/service/elektro/proverka-akb.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro1">
                   Подбор и замена АКП на Dodge
@@ -461,6 +490,7 @@
                   class="catalog-img"
                   src="./src/img/service/elektro/snjatie-gener-duster.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro2">
                   Процесс снятия генератора на Reno Duster
@@ -471,6 +501,7 @@
                   class="catalog-img"
                   src="./src/img/service/elektro/ustanovka-signaliz.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro3">
                   Процесс монтирования сигнализации на Ауди
@@ -481,6 +512,7 @@
                   class="catalog-img"
                   src="./src/img/service/elektro/zamena-generatora-lancer.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro4">
                   Замена генератора на лансер 9
@@ -491,6 +523,7 @@
                   class="catalog-img"
                   src="./src/img/service/elektro/zamena-pribornoy-p-volksv.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-electro5">
                   Ремонт приборной панели на Фольцваген
@@ -517,6 +550,7 @@
                   class="catalog-img"
                   src="./src/img/service/tormoz/logan-zamena-peredn-ts.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -530,6 +564,7 @@
                   class="catalog-img"
                   src="./src/img/service/tormoz/regul-torm-sist.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -543,6 +578,7 @@
                   class="catalog-img"
                   src="./src/img/service/tormoz/torm-kolodki-lanser10.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -556,6 +592,7 @@
                   class="catalog-img"
                   src="./src/img/service/tormoz/zamena-torm-kolodok.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -569,6 +606,7 @@
                   class="catalog-img"
                   src="./src/img/service/tormoz/zamena-torm-kolodok1.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -582,6 +620,7 @@
                   class="catalog-img"
                   src="./src/img/service/tormoz/zamena-torm-shlangov.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -611,6 +650,7 @@
                   class="catalog-img"
                   src="./src/img/service/transm/akpp-shkoda-oct.jpg"
                   alt="akpp-shkoda-oct"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm1">
                   Ремонт АКПП Шкода Октавия
@@ -621,6 +661,7 @@
                   class="catalog-img"
                   src="./src/img/service/transm/kardan-reno-duster.jpg"
                   alt="kardan-reno-duster"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm2">
                   Замена кардана на Рено Дастер
@@ -631,6 +672,7 @@
                   class="catalog-img"
                   src="./src/img/service/transm/scepl-logan.jpg"
                   alt="scepl-logan"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm3">
                   Замена сцепления на Логан
@@ -641,6 +683,7 @@
                   class="catalog-img"
                   src="./src/img/service/transm/scepl-smart.jpg"
                   alt="scepl-smart"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm4">
                   Замена сцепления на Смарт
@@ -651,6 +694,7 @@
                   class="catalog-img"
                   src="./src/img/service/transm/scepl_yaris.jpg"
                   alt="scepl_yaris"
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-transm5">
                   Замена сцепления на Toyota Yaris
@@ -678,6 +722,7 @@
                   class="catalog-img"
                   src="./src/img/service/to/filter-salona.jpg"
                   alt="filter-salona"
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -691,6 +736,7 @@
                   class="catalog-img"
                   src="./src/img/service/to/maslo-kp.jpg"
                   alt="maslo-kp"
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -704,6 +750,7 @@
                   class="catalog-img"
                   src="./src/img/service/to/remen-grm.jpg"
                   alt="remen-grm"
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -717,6 +764,7 @@
                   class="catalog-img"
                   src="./src/img/service/to/vozd-filter.jpg"
                   alt="vozd-filter"
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -730,6 +778,7 @@
                   class="catalog-img"
                   src="./src/img/service/to/zamena-masla-dvig.jpg"
                   alt="zamena-masla-dvig"
+                  loading="lazy"
                 />
                 <p
                   class="catalog-text"
@@ -761,6 +810,7 @@
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik1.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi1">
                   Диагностика автомобильных компрессоров
@@ -771,6 +821,7 @@
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik2.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi2">
                   Замена автомобильных компрессоров
@@ -781,6 +832,7 @@
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik3.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi3">
                   Проверка давление и устранение вытока фриона
@@ -791,6 +843,7 @@
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik4.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi4">
                   Заправка фрионом
@@ -801,6 +854,7 @@
                   class="catalog-img"
                   src="./src/img/service/kondik/kondik5.jpg"
                   alt=""
+                  loading="lazy"
                 />
                 <p class="catalog-text" data-translate="catalog-text-kondi5">
                   Антибактериальная обработка дифлекторов
@@ -829,7 +883,17 @@
                   ПОРЯДОЧНОСТЬ
                 </p>
               </div>
-              <img class="benefits-img" src="./src/img/bene-1.jpg" alt="" />
+              <picture>
+                <!-- ВебП версии -->
+                <source srcset="./src/img/bene-1.webp" type="image/webp" />
+                <!-- Фолбэк на JPEG -->
+                <img
+                  class="benefits-img"
+                  src="./src/img/bene-1.jpg"
+                  alt="porjadnist"
+                  loading="lazy"
+                />
+              </picture>
               <p class="benefits-bot-text" data-translate="benefits-bot-text1">
                 «Честный ремонт: только нужные работы, только нужные запчасти.»
               </p>
@@ -844,7 +908,17 @@
                   ОТВЕТСТВЕННОСТЬ
                 </p>
               </div>
-              <img class="benefits-img" src="./src/img/bene-2.jpg" alt="" />
+              <picture>
+                <!-- ВебП версии -->
+                <source srcset="./src/img/bene-2.webp" type="image/webp" />
+                <!-- Фолбэк на JPEG -->
+                <img
+                  class="benefits-img"
+                  src="./src/img/bene-2.jpg"
+                  alt="vidpovidalnist"
+                  loading="lazy"
+                />
+              </picture>
               <p class="benefits-bot-text" data-translate="benefits-bot-text2">
                 «Гарантируем качество – отвечаем за результат!»
               </p>
@@ -859,7 +933,17 @@
                   ОПЕРАТИВНОСТЬ
                 </p>
               </div>
-              <img class="benefits-img" src="./src/img/bene-3.jpg" alt="" />
+              <picture>
+                <!-- ВебП версии -->
+                <source srcset="./src/img/bene-3.webp" type="image/webp" />
+                <!-- Фолбэк на JPEG -->
+                <img
+                  class="benefits-img"
+                  src="./src/img/bene-3.jpg"
+                  alt="vidpovidalnist"
+                  loading="lazy"
+                />
+              </picture>
               <p class="benefits-bot-text" data-translate="benefits-bot-text3">
                 «Ваше авто не задержится у нас дольше необходимого.»
               </p>
