--- a/foto-gallery.html
+++ b/foto-gallery.html
@@ -353,6 +353,7 @@
             height="300"
             style="border-radius: 10px"
             class="iframe"
+            title="Мапа розташування автосервісу Каскад на Google Maps"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
