--- a/price.html
+++ b/price.html
@@ -199,6 +199,7 @@
                 height="200"
                 style="border-radius: 20px"
                 class="iframe"
+                title="Мапа розташування автосервісу Каскад на Google Maps"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
@@ -2129,6 +2130,7 @@
             height="300"
             style="border-radius: 10px"
             class="iframe"
+            title="Мапа розташування автосервісу Каскад на Google Maps"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
