--- a/parts.html
+++ b/parts.html
@@ -201,6 +201,7 @@
                 height="200"
                 style="border-radius: 20px"
                 class="iframe"
+                title="Мапа розташування автосервісу Каскад на Google Maps"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
@@ -1216,6 +1217,7 @@
             height="300"
             style="border-radius: 10px"
             class="iframe"
+            title="Мапа розташування автосервісу Каскад на Google Maps"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
