--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -258,6 +258,7 @@
                 height="200"
                 style="border-radius: 20px"
                 class="iframe"
+                title="Мапа розташування автосервісу Каскад на Google Maps"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
@@ -1661,6 +1662,7 @@
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671695603704!2d35.83380167638042!3d48.53002797128957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1749836072193!5m2!1sru!2sua"
             width="400"
+            title="Мапа розташування автосервісу Каскад на Google Maps"
             height="300"
             style="border-radius: 10px"
             class="iframe"
